--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-wheel==0.44.0
-cython==3.0.11
 fastapi==0.115.0
 uvicorn==0.30.6
 aiohttp==3.10.5
 pydantic==2.9.2
-PyPDF2==3.0.1
+google-generativeai==0.7.2
+
+# Работа с файлами
+pypdf2==3.0.1
 python-docx==1.1.2
-numpy==1.26.4
-pandas==2.2.3 
-odfpy==1.4.1 
-striprtf==0.0.26 
-python-magic==0.4.27 
-requests==2.32.3 
+pandas==2.2.3
+odfpy==1.4.1
+striprtf==0.0.26
+python-magic==0.4.27
+requests==2.32.3
 openpyxl==3.1.5
