--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.10.5
 pydantic==2.9.2
 google-generativeai==0.7.2
 python-dotenv==1.0.1
+python-multipart==0.0.9
 
 # Работа с файлами
 pypdf2==3.0.1
@@ -14,4 +15,5 @@ striprtf==0.0.26
 python-magic==0.4.27
 requests==2.32.3
 openpyxl==3.1.5
+
 
